# dataclass-pack

./: LICENSE  README.md  pyproject.toml
.github/workflows/: push.yml
test/: test_package.py
